--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
   }
 
   .btn {
-    @apply bg-primaryColor py-[15px] px-[15px] rounded-[50px] text-white font-[600] mt-[38px]
+    @apply bg-primaryColor py-[15px] px-[15px] rounded-[50px] text-white font-[600] mt-[38px] hover:bg-white hover:border-black hover:text-black
   }
 
   .heading {
